<resources>
    <string name="unknown" translatable="false">unknown error</string>
    <string name="app_name"><![CDATA[4D Wallpapers]]></string>
    <string name="add_to_playlist"><![CDATA[Add to playlist]]></string>
    <string name="add_wallpaper_favorite_successfully"><![CDATA[Added wallpaper to favorites successfully]]></string>
    <string name="added_playlist_successfully"><![CDATA[Added to wallpaper list successfully]]></string>
    <string name="allowed"><![CDATA[Allow]]></string>
    <string name="start_use_app"><![CDATA[Start the experience]]></string>
    <string name="contact"><![CDATA[Contact]]></string>
    <string name="deny"><![CDATA[Deny]]></string>
    <string name="discover_wallpaper"><![CDATA[Discovery Wallpapers]]></string>
    <string name="do_not_show_popup"><![CDATA[Do not show this popup again]]></string>
    <string name="download"><![CDATA[Download]]></string>
    <string name="download_wallpaper_fail"><![CDATA[Failed to download wallpaper]]></string>
    <string name="download_wallpaper_successfully"><![CDATA[Downloaded wallpaper successfully!]]></string>
    <string name="faq"><![CDATA[FAQ]]></string>
    <string name="favorite"><![CDATA[Favorite]]></string>
    <string name="live_wallpapers"><![CDATA[Live wallpapers]]></string>
    <string name="more_app"><![CDATA[More Apps]]></string>
    <string name="ask_confirm_reset_wallpaper"><![CDATA[Are you sure you want to reset the default wallpaper?]]></string>
    <string name="message_down_wallpaper_success"><![CDATA[Let\'s see your downloaded wallpapers.]]></string>
    <string name="message_toast_checking_network"><![CDATA[Please double check your Internet connection!]]></string>
    <string name="message_toast_connect_network"><![CDATA[Please connect to the Internet]]></string>
    <string name="new_wallpaper"><![CDATA[New Wallpapers]]></string>
    <string name="no_record_error"><![CDATA[Sorry! No results found.]]></string>
    <string name="off"><![CDATA[Off]]></string>
    <string name="on"><![CDATA[On]]></string>
    <string name="one_day"><![CDATA[1 day]]></string>
    <string name="deny_permission"><![CDATA[Permission denied!\n You need to approve all required permissions for this application]]></string>
    <string name="require_permission"><![CDATA[Application needs some permissions for this feature:]]></string>
    <string name="storage_permission"><![CDATA[To store your ringtone file on your phone and its SD card]]></string>
    <string name="storage_title_permission"><![CDATA[Storage:]]></string>
    <string name="preview"><![CDATA[Preview]]></string>
    <string name="privacy_policy"><![CDATA[Privacy Policy]]></string>
    <string name="reset_all_wallpaper_menu"><![CDATA[Reset all wallpapers to default]]></string>
    <string name="reset_all_wallpaper_success"><![CDATA[Reset all wallpapers to default successfully]]></string>
    <string name="search"><![CDATA[Search]]></string>
    <string name="set_wallpapers"><![CDATA[Set wallpaper]]></string>
    <string name="setting"><![CDATA[Settings]]></string>
    <string name="ask_setting_confirm_wallpaper"><![CDATA[Are you sure you want to set this wallpaper?]]></string>
    <string name="setting_wallpaper_error"><![CDATA[Failed to set wallpaper]]></string>
    <string name="setting_wallpaper_successfully"><![CDATA[Set wallpaper successfully]]></string>
    <string name="share"><![CDATA[Share]]></string>
    <string name="show_notification"><![CDATA[Show notification]]></string>
    <string name="six_hours"><![CDATA[6 hours]]></string>
    <string name="thanks_for_using"><![CDATA[Thank you for using this application]]></string>
    <string name="three_days"><![CDATA[3 days]]></string>
    <string name="top_download"><![CDATA[Top Downloads]]></string>
    <string name="two_hours"><![CDATA[2 hours]]></string>
    <string name="twelve_hours"><![CDATA[12 hours]]></string>
    <string name="fifteen_minutes"><![CDATA[15 minutes]]></string>
    <string name="thirty_minutes"><![CDATA[30 minutes]]></string>
    <string name="one_hour"><![CDATA[1 hour]]></string>
    <string name="unfavorite_action"><![CDATA[Unfavorite]]></string>
    <string name="unfavorite_wallpaper_successfully"><![CDATA[Unfavorited wallpaper successfully]]></string>
    <string name="wallpaper_is_already_downloaded"><![CDATA[This wallpaper is already downloaded]]></string>
    <string name="feature_not_supported"><![CDATA[This feature is being developed]]></string>
    <string name="title_favorite"><![CDATA[Favorites]]></string>
    <string name="title_wallpaper_automatically_change_time"><![CDATA[Wallpapers will automatically change after]]></string>
    <string name="fullscreen"><![CDATA[Fullscreen]]></string>
    <string name="delete"><![CDATA[Delete]]></string>
    <string name="ask_confirm_delete_wall"><![CDATA[Do you want to delete this wallpaper?]]></string>
    <string name="update"><![CDATA[Update]]></string>
    <string name="title_msg_dialog_app_die"><![CDATA[We`ve stopped providing services for this app, please click here to continue using!]]></string>
    <string name="title_msg_dialog_update_app"><![CDATA[For more exciting experiences, kindly update to the latest version of %s!]]></string>
    <string name="activity_not_support"><![CDATA[Your device doesn\'t support this feature]]></string>
    <string name="ad_attribution_keyword" translatable="false">Ad</string>
    <string name="contact_email" translatable="false">hiade.lux@gmail.com</string>
    <string name="empty" translatable="false" />
    <string name="ironsrc_app_id" translatable="false">9e20337d</string>
    <string name="applovin_key" translatable="false">iUUlRZ8EThL9DGJyR26U0qrleLAr6h8IrlnMaaNR8TFABMxTSNlMaB2px5Q2v-enM50ioPTQP0S1a1Qo6ashBh</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-2057867305416948~4687724041</string>
    <string name="admod_banner_unit_id" translatable="false">ca-app-pub-7419471344239141/7918956962</string>
    <string name="admod_inter_unit_id" translatable="false">ca-app-pub-4294231575465742/2933807957</string>
    <string name="admod_native_id" translatable="false">ca-app-pub-4294231575465742/9492882411</string>
    <string name="admod_detail_native_id" translatable="false">ca-app-pub-4294231575465742/6866719077</string>
    <string name="admod_rewarded_video_unit_id" translatable="false">ca-app-pub-4294231575465742/8518959510</string>
    <string name="admod_open" translatable="false">ca-app-pub-4294231575465742/8371372437</string>
    <string name="ask_msg_confirm_turn_on_playlist"><![CDATA[Do you want to activate Auto Change Wallpaper mode?]]></string>
    <string name="ask_msg_confirm_turn_off_playlist"><![CDATA[Do you want to turn off auto change wallpaper?]]></string>
    <string name="ask_msg_confirm_remove_item_playlist"><![CDATA[Are you sure you want to remove this wallpaper from the Auto Change list?]]></string>
    <string name="ask_msg_warning_empty_playlist"><![CDATA[Oops! You don\'t have any wallpaper in auto change wallpaper list!]]></string>
    <string name="auto_change_wallpaper"><![CDATA[Auto change wallpaper]]></string>
    <string name="turn_on_action"><![CDATA[Turn on]]></string>
    <string name="turn_off_action"><![CDATA[Turn off]]></string>
    <string name="ok" translatable="false"><![CDATA[OK]]></string>
    <string name="msg_requested_permission_title"><![CDATA[To save wallpapers to device, we need permission to access to photos and files on your device.  ]]></string>
    <string name="accept_action"><![CDATA[Accept]]></string>
    <string name="skip_action"><![CDATA[Skip]]></string>
    <string name="popup_invite_rate_title"><![CDATA[We hope you could choose the wallpaper you like. Are you satisfied with %s? ]]></string>
    <string name="popup_invite_rate_like_txt"><![CDATA[LIKE!]]></string>
    <string name="popup_invite_rate_dislike"><![CDATA[NOT REALLY]]></string>
    <string name="popup_rate_msg"><![CDATA[We are trying our best to bring users better experience.]]></string>
    <string name="popup_rate_msg_2"><![CDATA[We highly appreciate your rating!]]></string>
    <string name="rating_hate_status"><![CDATA[Hate]]></string>
    <string name="rating_dislike_status"><![CDATA[Dislike]]></string>
    <string name="rating_just_ok_status"><![CDATA[Just OK]]></string>
    <string name="rating_like_status"><![CDATA[Like!]]></string>
    <string name="rating_very_like_status"><![CDATA[Love!]]></string>
    <string name="popup_rate_play_store_msg"><![CDATA[Your comment would be helpful to other users.]]></string>
    <string name="popup_rate_play_store_msg_2"><![CDATA[Kindly leave your rating & review on Google Play.]]></string>
    <string name="rating_dialog_rate_store_msg"><![CDATA[RATE THE APP ON GOOGLE PLAY]]></string>
    <string name="popup_feedback_app_title"><![CDATA[Your feedback was helpful.]]></string>
    <string name="rating_dialog_rate_msg"><![CDATA[RATE]]></string>
    <string name="close_popup_rate_msg"><![CDATA[Not now]]></string>
    <string name="popup_feedback_app_others"><![CDATA[Others]]></string>
    <string name="popup_feedback_app_send"><![CDATA[SUBMIT]]></string>
    <string name="feedback_form" translatable="false"><![CDATA[Feedback to %s V%s VersionCode:%d\n%s %s\n%s\n%s]]></string>
    <string name="feedback_default_1"><![CDATA[I do not like the design]]></string>
    <string name="feedback_default_2"><![CDATA[It does not have the features I need]]></string>
    <string name="feedback_detail_2"><![CDATA[Please tell us the features you would like to have]]></string>
    <string name="feedback_default_3"><![CDATA[It is hard to use]]></string>
    <string name="feedback_detail_3"><![CDATA[Please tell us about the difficulties you experienced]]></string>
    <string name="feedback_default_4"><![CDATA[It is too complicated]]></string>
    <string name="feedback_default_5"><![CDATA[The translation is not good]]></string>
    <string name="feedback_default_6"><![CDATA[I can\'t find my favorite wallpaper]]></string>
    <string-array name="feedback_list">
        <item>@string/feedback_default_1</item>
        <item>@string/feedback_default_2</item>
        <item>@string/feedback_default_3</item>
        <item>@string/feedback_default_4</item>
        <item>@string/feedback_default_5</item>
    </string-array>
    <string name="msg_title_gender"><![CDATA[You prefer wallpapers for males or females?]]></string>
    <string name="boy"><![CDATA[Boy]]></string>
    <string name="girl"><![CDATA[Girl]]></string>
    <string name="name_native_ads"><![CDATA[Sponsored]]></string>
    <string name="yes_action"><![CDATA[Yes]]></string>
    <string name="no_action"><![CDATA[No]]></string>
    <string name="discover_more_app"><![CDATA[Discovery games and apps]]></string>
    <string name="ask_cancel_message"><![CDATA[Are you sure you want to exit?]]></string>
    <string name="download_and_set">Download and set wallpaper</string>
    <string name="collection_keyword">Collection</string>
    <string name="retry"><![CDATA[Retry]]></string>
    <string name="using_device">Use device\'s service</string>
    <string name="watch_reward_ads_guideline"><![CDATA[You just need to watch a short video to download this wallpaper for free.]]></string>
    <string name="watch_reward_ads_button_title"><![CDATA[Watch ad]]></string>
    <string name="watch_reward_ad_title"><![CDATA[Download wallpaper for free!]]></string>
    <string name="popup_hard_use_feedback_title"><![CDATA[Could you please tell us about your difficulties?]]></string>
    <string name="default_hard_used_feedback_1"><![CDATA[I don\'t know how to set a wallpaper]]></string>
    <string name="default_hard_used_feedback_2"><![CDATA[I don\'t know how to download a wallpaper]]></string>
    <string name="default_hard_used_feedback_4"><![CDATA[I don\'t know how to reset a wallpaper to default]]></string>
    <string name="default_hard_used_feedback_5"><![CDATA[I don\'t understand the language]]></string>
</resources>