<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rounded_re"
    android:orientation="vertical"
    android:padding="24dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                style="@style/TextViewTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/popup_hard_use_feedback_title"
                android:textColor="#343E60"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox1"
                style="@style/CheckboxStyleDialogFeedback"
                android:layout_marginTop="22dp"
                android:button="@drawable/bg_checkbox_feedback_re"
                android:paddingStart="12dp"
                android:text="@string/default_hard_used_feedback_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox2"
                style="@style/CheckboxStyleDialogFeedback"
                android:layout_marginTop="18dp"
                android:text="@string/default_hard_used_feedback_2"
                android:button="@drawable/bg_checkbox_feedback_re"
                android:paddingStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox1" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox4"
                style="@style/CheckboxStyleDialogFeedback"
                android:layout_marginTop="18dp"
                android:text="@string/default_hard_used_feedback_4"
                android:button="@drawable/bg_checkbox_feedback_re"
                android:paddingStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox2" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox5"
                style="@style/CheckboxStyleDialogFeedback"
                android:layout_marginTop="22dp"
                android:text="@string/default_hard_used_feedback_5"
                app:layout_constraintEnd_toEndOf="parent"
                android:button="@drawable/bg_checkbox_feedback_re"
                android:paddingStart="12dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkBox4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:hint="@string/popup_feedback_app_others"
        android:backgroundTint="#DBDDE0"
        android:maxLines="3"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        style="@style/PositiveButton"
        android:layout_width="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_btn_send_request_re"
        android:text="@string/popup_feedback_app_send"
        android:textColor="@color/white"
        app:backgroundTint="@null" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSkip"
        style="@style/OutlinedButton"
        android:layout_width="160dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_btn_dislike_rate_re"
        android:text="@string/close_popup_rate_msg"
        android:textColor="#536295"
        app:backgroundTint="@null" />

</LinearLayout>
