<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="146dp"
        android:layout_marginTop="16dp"
        app:lottie_rawRes="@raw/reward_ad_animation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#00ad1a"
        android:lineSpacingExtra="4.6sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:text="@string/watch_reward_ad_title"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvGuide"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:text="@string/watch_reward_ads_guideline"
        android:textColor="#272727"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnWatchRewardAd"
        style="@style/PositiveButton"
        android:background="@null"
        android:text="@string/watch_reward_ads_button_title"
        android:layout_width="200dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#0dad00"
        app:cornerRadius="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvGuide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSkipWatchReward"
        style="@style/OutlinedButton"
        android:layout_marginTop="16dp"
        android:text="@string/skip_action"
        android:textColor="#949494"
        app:strokeColor="#949494"
        android:layout_width="200dp"
        android:textStyle="normal"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWatchRewardAd"
        android:layout_marginBottom="16dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>